# pylint-to-ruff

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  update_ruff_aliases.py
.github/workflows/: build.yml  ci.yml  test.yml
pylint_to_ruff/: __main__.py  cli.py  pylint.py  ruff.py  ruff_aliases.py
tests/: test_smoke.py
tests/victim/: .pylintrc
